update-css: prevent table text to wrap

--- a/src/styles/bulma.scss
+++ b/src/styles/bulma.scss
@@ -20,6 +20,10 @@ table {
     font-size: 0.8rem;
 }
 
+td {
+    white-space: nowrap;
+}
+
 thead tr:nth-child(2) th {
     padding-bottom: 0;
     vertical-align: bottom;
